# reprodb-pipeline

./: check_zenodo_github_links.py  mkdocs.yml  pyproject.toml  requirements-ci.txt  requirements-docs.txt
.github/workflows/: dblp-author-analysis.yml
data/: excluded_repos.yaml
docs/: gen_ref_pages.py
docs/schemas/: index.md
src/data/: institution_overrides.yml
src/generators/: generate_author_index.py  generate_combined_rankings.py  generate_institution_rankings.py  generate_repo_stats.py
src/generators/authors/: generate_author_index.py
src/generators/citations/: generate_artifact_citations.py
src/generators/committee_stats/: __init__.py  chair_stats.py  classification.py
src/generators/output/: generate_paper_index.py  generate_search_data.py  generate_statistics.py  generate_visualizations.py
src/generators/repository/: generate_repo_stats.py
src/models/: __init__.py  combined_rankings.py  institution_rankings.py
src/models/aggregates/: repo_stats.py
src/models/artifacts/: artifacts.py
src/models/authors/: author_index.py  author_stats.py
src/models/committees/: ae_chairs.py  chair_stats.py
src/scrapers/: repo_utils.py
src/utils/apis/: download_dblp.py
tests/: test_invariants.py
tests/scrapers/: test_repo_utils.py
