[project]
name = "artifact-analysis"
version = "0.3.0"
requires-python = ">=3.9"

[tool.ruff]
target-version = "py39"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "LOG",  # flake8-logging
    "T20",  # flake8-print (flag print statements)
]
ignore = [
    "E501",   # line length handled by formatter
    "SIM108", # don't force ternary
    "RET504", # unnecessary assignment before return
    "B028",   # no explicit stacklevel in warnings
    "UP015",  # redundant open mode — keep explicit for clarity
]

[tool.ruff.lint.per-file-ignores]
# matplotlib.use("Agg") must precede pyplot import
"src/generators/committee_stats/generate_committee_stats.py" = ["E402"]
"src/generators/output/generate_visualizations.py" = ["E402"]
# Utility script — prints are intentional
"check_zenodo_github_links.py" = ["T20", "B007", "F541"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 120
target-version = ["py39"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "."

# Per-module overrides — silence noisy files, fix incrementally
[[tool.mypy.overrides]]
module = [
    "src.generators.repository.generate_repo_stats",
    "src.generators.authors.generate_author_stats",
    "src.generators.authors.generate_area_authors",
    "src.generators.rankings.generate_institution_rankings",
    "src.generators.committee_stats.generate_committee_stats",
    "src.generators.citations.generate_artifact_citations",
    "src.generators.citations.generate_cited_artifacts_list",
    "src.generators.output.generate_statistics",
    "src.generators.citations.verify_artifact_citations",
    "src.generators.repository.generate_artifact_availability",
    "src.generators.output.generate_visualizations",
    "src.generators.citations.export_artifact_citations",
    "src.generators.rankings.generate_ranking_history",
    "src.generators.repository.generate_participation_stats",
    "src.generators.authors.generate_author_index",
    "src.generators.authors.generate_author_profiles",
    "src.generators.committee_stats.*",
    "src.scrapers.usenix_scrape",
    "src.scrapers.repo_utils",
    "src.scrapers.acm_scrape",
    "src.scrapers.parse_results_md",
    "src.scrapers.scrape_committee_web",
    "src.scrapers.parse_committee_md",
    "src.scrapers.generate_results",
    "src.scrapers.acsac_scrape",
    "src.enrichers.enrich_affiliations_openalex",
    "src.enrichers.enrich_affiliations_csrankings",
    "src.enrichers.enrich_affiliations_ae_members",
    "src.generators.output.generate_paper_index",
    "src.generators.output.generate_search_data",
    "src.generators.rankings.generate_combined_rankings",
    "src.generators.collect_repo_detail",
]
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = ["-v", "--tb=short"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring fixture data",
]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true
